# qe

./: .gitignore  CMakeLists.txt  README.md  index.html  install.sh  style.css
include/: buf.h  claude.h  cli.h  editor.h  filewatcher.h  fuzzy.h  git.h  input.h  lang.h  lua_bridge.h  qf.h  recovery.h  render.h  search.h  syntax.h  term_emu.h  terminal.h  theme.h  tree.h  undo.h  undofile.h  utils.h
src/: buf.c  claude.c  cli.c  editor.c  filewatcher.c  fuzzy.c  git.c  input.c  lang.c  lua_bridge.c  main.c  qf.c  recovery.c  render.c  search.c  syntax.c  term_emu.c  terminal.c  theme.c  tree.c  undo.c  undofile.c  utils.c
tests/: CMakeLists.txt  test_buf.c  test_recovery.c  test_render.c  test_search.c  test_syntax.c  test_theme.c  test_undo.c  test_undofile.c
themes/: monokai.lua
